kubernetes/nginx.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-deployment
  namespace: felix
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30000
